@@ -1,5 +1,5 @@
-if (JavaVersion.current() != JavaVersion.VERSION_11) {
-    throw new GradleException("This build must be run with java 11, is currently " + JavaVersion.current())
+if (JavaVersion.current() != JavaVersion.VERSION_17) {
+    throw new GradleException("This build must be run with java 17, is currently " + JavaVersion.current())
 } else {
     System.out.println("Java version: " + JavaVersion.current())
 }
@@ -19,7 +19,7 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    version = 'Alpha 8.1.19'
+    version = 'Alpha 8.1.20'
     ext {
         appName = 'undermount'
         gdxVersion = '1.9.10'
@@ -39,7 +39,7 @@ allprojects {
 
 project(":desktop") {
     apply plugin: "java-library"
-    sourceCompatibility = 11
+    sourceCompatibility = 17
 
 
     dependencies {
@@ -126,7 +126,7 @@ project(":desktop") {
 
 project(":core") {
     apply plugin: "java-library"
-    sourceCompatibility = 11
+    sourceCompatibility = 17
 
 
     dependencies {
