@@ -1,3 +1,7 @@
+Alpha 8.1.20 - 12th Ferbuary 2022
+
+- Upgraded Java version from 11 to 17
+
 Alpha 8.1.19 - 12th February 2022
 
 - Updated version of app packaging tool to hopefully fix an issue with Java internals
